# plop

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: atlas.json  autumn.pal  config.ini
assets/source/: atlas.tps  ship.grk
cmake/: CompilerWarnings.cmake  FindWwise.cmake
plop_wwise/: plop_wwise.wproj
plop_wwise/Actor-Mixer Hierarchy/: Debug.wwu  Default Work Unit.wwu  ship.wwu
plop_wwise/Attenuations/: Default Work Unit.wwu
plop_wwise/Audio Devices/: Default Work Unit.wwu
plop_wwise/Control Surface Sessions/: Default Work Unit.wwu
plop_wwise/Conversion Settings/: Default Work Unit.wwu
plop_wwise/Dynamic Dialogue/: Default Work Unit.wwu
plop_wwise/Effects/: Default Work Unit.wwu  Factory Effects.wwu
plop_wwise/Events/: Debug.wwu  Default Work Unit.wwu
plop_wwise/Game Parameters/: Debug.wwu  Default Work Unit.wwu
plop_wwise/GeneratedSoundBanks/: ProjectInfo.xml  Wwise_IDs.h
plop_wwise/GeneratedSoundBanks/Windows/: Debug_Sounds.bnk  Debug_Sounds.txt  Init.bnk  Init.txt  Mix_Master.bnk  Mix_Master.txt  Player.bnk  Player.txt  SoundbanksInfo.xml
plop_wwise/Interactive Music Hierarchy/: Default Work Unit.wwu
plop_wwise/Master-Mixer Hierarchy/: Default Work Unit.wwu
plop_wwise/Metadata/: Default Work Unit.wwu
plop_wwise/Mixing Sessions/: Default Work Unit.wwu
plop_wwise/Modulators/: Default Work Unit.wwu
plop_wwise/Presets/: Default Work Unit.wwu
plop_wwise/Queries/: Default Work Unit.wwu
plop_wwise/SoundBanks/: Default Work Unit.wwu
plop_wwise/Soundcaster Sessions/: Default Work Unit.wwu
plop_wwise/States/: Default Work Unit.wwu
plop_wwise/Switches/: Default Work Unit.wwu
plop_wwise/Triggers/: Default Work Unit.wwu
plop_wwise/Virtual Acoustics/: Default Work Unit.wwu
reaper/plop/: plop.rpp
reaper/plop/Backups/: plop-2023-12-03_152546.rpp-bak  plop-2023-12-03_154654.rpp-bak  plop-2023-12-03_154914.rpp-bak
reaper/plop/Media/peaks/: plop_freeze_Pigments.wav.reapeaks  plop_stems_Pigments-001.wav.reapeaks  plop_stems_Pigments-002.wav.reapeaks  plop_stems_Pigments-003.wav.reapeaks  plop_stems_Pigments.wav.reapeaks
reaper/ship/: ship.rpp
reaper/ship/Backups/: ship-2023-12-01_134941.rpp-bak  ship-2023-12-01_142547.rpp-bak  ship-2023-12-01_144440.rpp-bak
reaper/ship/Media/peaks/: ship_freeze_LABS.wav.reapeaks  ship_stems_LABS-001.wav.reapeaks  ship_stems_LABS.wav.reapeaks
reaper/ship/Rendered/peaks/: Choir.wav.reapeaks
src/: game.cpp  game.h  main.cpp  palette.cpp  palette.h  rnd.h  util.h  wwise.cpp  wwise.h
src/SoundEngine/Common/: AkFileLocationBase.cpp  AkFilePackage.cpp  AkFilePackageLUT.cpp  AkGeneratedSoundBanksResolver.cpp  AkJobWorkerMgr.cpp  AkMultipleFileLocation.cpp
src/SoundEngine/Win32/: AkDefaultIOHookDeferred.cpp
